tests/snapshots/parser@function.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/function.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 94,
        },
        source: "v.add = function('x', 'y', {\n    return v.x + v.y;\n});\n\nv.sub = function('x', 'y', v.x - v.y);\n\n",
        body: Complex(
            [
                Assignment(
                    AssignmentStatement {
                        span: Span {
                            start: 0,
                            end: 53,
                        },
                        left: VariableExpression {
                            span: Span {
                                start: 0,
                                end: 5,
                            },
                            scope: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 2,
                                        end: 5,
                                    },
                                    name: "add",
                                },
                            },
                        },
                        operator: Assign,
                        right: Function(
                            FunctionExpression {
                                span: Span {
                                    start: 8,
                                    end: 53,
                                },
                                parameters: Some(
                                    [
                                        StringLiteral {
                                            span: Span {
                                                start: 17,
                                                end: 20,
                                            },
                                            value: "x",
                                        },
                                        StringLiteral {
                                            span: Span {
                                                start: 22,
                                                end: 25,
                                            },
                                            value: "y",
                                        },
                                    ],
                                ),
                                body: Block(
                                    BlockExpression {
                                        span: Span {
                                            start: 27,
                                            end: 52,
                                        },
                                        statements: [
                                            Return(
                                                ReturnStatement {
                                                    span: Span {
                                                        start: 33,
                                                        end: 49,
                                                    },
                                                    argument: Binary(
                                                        BinaryExpression {
                                                            span: Span {
                                                                start: 40,
                                                                end: 49,
                                                            },
                                                            left: Variable(
                                                                VariableExpression {
                                                                    span: Span {
                                                                        start: 40,
                                                                        end: 43,
                                                                    },
                                                                    scope: Variable,
                                                                    member: Property {
                                                                        property: Identifier {
                                                                            span: Span {
                                                                                start: 42,
                                                                                end: 43,
                                                                            },
                                                                            name: "x",
                                                                        },
                                                                    },
                                                                },
                                                            ),
                                                            operator: Addition,
                                                            right: Variable(
                                                                VariableExpression {
                                                                    span: Span {
                                                                        start: 46,
                                                                        end: 49,
                                                                    },
                                                                    scope: Variable,
                                                                    member: Property {
                                                                        property: Identifier {
                                                                            span: Span {
                                                                                start: 48,
                                                                                end: 49,
                                                                            },
                                                                            name: "y",
                                                                        },
                                                                    },
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                ),
                            },
                        ),
                    },
                ),
                Assignment(
                    AssignmentStatement {
                        span: Span {
                            start: 56,
                            end: 93,
                        },
                        left: VariableExpression {
                            span: Span {
                                start: 56,
                                end: 61,
                            },
                            scope: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 58,
                                        end: 61,
                                    },
                                    name: "sub",
                                },
                            },
                        },
                        operator: Assign,
                        right: Function(
                            FunctionExpression {
                                span: Span {
                                    start: 64,
                                    end: 93,
                                },
                                parameters: Some(
                                    [
                                        StringLiteral {
                                            span: Span {
                                                start: 73,
                                                end: 76,
                                            },
                                            value: "x",
                                        },
                                        StringLiteral {
                                            span: Span {
                                                start: 78,
                                                end: 81,
                                            },
                                            value: "y",
                                        },
                                    ],
                                ),
                                body: Binary(
                                    BinaryExpression {
                                        span: Span {
                                            start: 83,
                                            end: 92,
                                        },
                                        left: Variable(
                                            VariableExpression {
                                                span: Span {
                                                    start: 83,
                                                    end: 86,
                                                },
                                                scope: Variable,
                                                member: Property {
                                                    property: Identifier {
                                                        span: Span {
                                                            start: 85,
                                                            end: 86,
                                                        },
                                                        name: "x",
                                                    },
                                                },
                                            },
                                        ),
                                        operator: Subtraction,
                                        right: Variable(
                                            VariableExpression {
                                                span: Span {
                                                    start: 89,
                                                    end: 92,
                                                },
                                                scope: Variable,
                                                member: Property {
                                                    property: Identifier {
                                                        span: Span {
                                                            start: 91,
                                                            end: 92,
                                                        },
                                                        name: "y",
                                                    },
                                                },
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ],
        ),
    },
    errors: [],
}
